tests/integration/routes/src/three/routes/error/loader/page.data.client.ts
export const loader = async () => {
  return 'render by client loader';
};
